23-ingress/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: api
          image: fastapi-ingress:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
